<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">blindr</string>
    <string name="title_activity_public_chat">Public Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_connect_facebook">Connect Facebook</string>
    <string name="app_id">750374798414544</string>
    <string name="want_to_delete">Do you really want to block %s?</string>
    <string name="want_to_like">Do you really want to like %s?</string>
    <string name="location_not_found">Your location has not been found.\nPlease try again.</string>
    <string name="no_network">No network is available.\nPlease try again later.</string>
    <string name="lost_connectivity">You are currently disconnected</string>
    <string name="server_error">There was an error during authentification.\nPlease try again later.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="title_activity_private_chat">Private Chat</string>
    <string name="title_activity_slideshow">SlideshowActivity</string>
    <string name="authenticating">Authenticating...</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="other">Other</string>
    <string name="interested_in">What are you interested in?</string>
    <string name="pictures_to_use">Choose the pictures you want\nto show in private</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="pick_a_room">Pick a room</string>
    <string name="trending">Trending right now</string>
    <string name="reconnect_to_last">Reconnect to %s</string>
    <string name="activity_title">Facebook Albums</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="use_photo">Do you want to use this picture?</string>
    <string name="add_picture">Add a picture</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="blindr_desc">blindr drops you in a chatroom populated with the brightest folks in town, while remaining anonymous! blindr allows chatees to « show interest » in one another, matching them personally, revealing their identity.</string>
    <string name="add_pictures">Let others know what you look like!\nAdd a minimum of two pictures</string>
    <string name="not_enough_pictures">You need to add at least 2 pictures to your profile</string>

</resources>
