<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/main_color" >

        <TextView
            android:id="@+id/textViewTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/pick_a_room"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/topBar" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:layout_below="@id/topBar"
        android:background="@drawable/bottom_shadow" />

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/map"
        android:background="@color/main_color" >

        <com.checkin.avatargenerator.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_white_sel"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/fake_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/avatar"
            android:text="@string/hello_world"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/trending"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progress_trending"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/trending"
            android:layout_alignTop="@id/trending"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/trending" />

        <ListView
            android:id="@+id/trending_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/lastUsedAddress"
            android:layout_below="@id/trending"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/lastUsedAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gen_sel"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/reconnect_to_last"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:layout_above="@id/bottomBar"
        android:background="@drawable/top_shadow" />

</RelativeLayout>